--- a/css/styles.css
+++ b/css/styles.css
@@ -721,6 +721,55 @@ margin-bottom: 16px;
 background-color: #31D0AA;
   }
 
+
+  .footer-contact-form{
+    position:relative;
+    display:block;
+  }
+
+  .footer-form-text {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--backgroundcolor);
+  }
+
+
+  .footer-form-input{
+left: 57.5%;
+right: 24.17%;
+top: 44.87%;
+bottom: 42.31%;
+border: 1px solid var(--backgroundcolor);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+background-color: var(--textcolor);
+  }
+
+  .footer-form-subscribe{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    align-items: flex-start;
+    letter-spacing: 0.04em;
+    color: var(--backgroundcolor);
+    background-color: var(--logowebcolor);
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 8px 24px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 165px;
+    height: 40px;
+    border: none;
+  }
+
+  .footer-form-icon{
+fill: var(--backgroundcolor);
+  }
+
   .overlay{
 position: fixed;
 top:0;
@@ -750,6 +799,7 @@ height: 576px;
 background-color: #fcfcfc;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
+padding: 72px 24px 24px 24px;
   }
 
   .modal-close-btn{
@@ -763,7 +813,7 @@ top: 24px;
 right:24px;
 box-sizing: border-box;
 background-color: var(--btnbordercolor);
- border-radius:50%;
+border-radius:50%;
  cursor: pointer;
  transition: background-color 250ms var(--cubic); 
  }
@@ -780,4 +830,144 @@ background-color: var(--activebackbtncolor);
   .modal-close-btn:hover .modal-icon,
   .modal-close-btn:focus .modal-icon{
  fill: var(--backgroundcolor);
+  }
+
+  .modal-form {
+display: flex;
+flex-direction: column;
+  }
+
+  .modal-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--textcolor)
+  }
+
+  .modal-form-container{
+margin-top: 16px;
+  }
+
+  .modal-form-field{
+margin-bottom: 8px;
+  }
+
+  .modal-form-text{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+    margin-bottom: 8px;
+  }
+  
+  .modal-form-wrapper{
+position:relative;
+display: block;
+  }
+
+  .modal-form-input {
+width: 100%;
+height: 40px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+padding-left: 40px ;
+transition: border-color var(--logowebcolor) 250ms var(--cubic);
+}
+
+.modal-form-icon{
+  position:absolute;
+  top:50%;
+  left:16px;
+  transform: translate(0,-50%);
+  display:block;
+  fill: var(--textcolor);
+  transition: fill var(--logowebcolor) 250ms var(--cubic);
+}
+
+.modal-form-input:focus{
+border-color: var(--logowebcolor);
+outline: none;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--logowebcolor);
+}
+
+
+.modal-form-msg{
+width: 100%;
+height: 120px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+padding: 8px 16px;
+}
+
+.modal-form-msg::placeholder{
+font-weight: 400;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: var(--textcolor);
+}
+
+
+.modal-form-check-desc{
+font-weight: 400;
+font-size: 12px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+color: #8E8F99;
+margin-left: 8px;
+}
+
+.modal-form-check {
+width: 16px;
+height: 16px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 2px;
+}
+
+.modal-form-check:focus{
+background-color: var(--activebackbtncolor);
+}
+
+.modal-form-submit {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+align-items: center;
+text-align: center;
+letter-spacing: 0.04em;
+color: var(--backgroundcolor);
+background: var(--logowebcolor);
+cursor: pointer;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+padding: 16px 32px;
+display: block;
+margin-top: 24px;
+margin-left: auto;
+margin-right: auto;
+min-width: 169px;
+height: 56px;
+border: none;
+transition: background-color 250ms var(--cubic); 
+}
+
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+    background-color: var(--activebackbtncolor);
+  }
+
+
+  .modal-form-privacy{
+    font-weight: 400;
+font-size: 12px;
+line-height: 1.33;
+letter-spacing: 0.04em;
+text-decoration-line: underline;
+color: var(--logowebcolor);
   }
