--- a/css/styles.css
+++ b/css/styles.css
@@ -671,7 +671,7 @@ transition: transform 250ms var(--cubic);
   .footer-all{
     display: flex;
     align-items: baseline;
-    gap:120px;
+    gap: 80px;
   }
 
   .footer-social{
@@ -744,6 +744,7 @@ color: var(--backgroundcolor);
 .footer-form-field{
   position: relative;
   display: block;
+  color: var(--backgroundcolor);
 }
 
   .footer-form-field::placeholder{
@@ -769,7 +770,6 @@ padding: 8px 16px;
   }
 
   .footer-form-subscribe{
-    position:relative;
 text-align: left;
 padding-left: 24px;
     font-weight: 500;
@@ -826,7 +826,7 @@ top:50%;
 left: 50%;
 transform: translate(-50%, -50%);
 width:408px;
-height: 576px;
+min-height: 584px;
 background-color: #fcfcfc;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
@@ -845,12 +845,13 @@ right:24px;
 box-sizing: border-box;
 background-color: var(--btnbordercolor);
 border-radius:50%;
+border: 1px solid rgba(0, 0, 0, 0.1);
  cursor: pointer;
  transition: background-color 250ms var(--cubic); 
  }
 
   .modal-icon{
-transition: background-color 250ms var(--cubic); 
+transition: fill 250ms var(--cubic); 
   }
 
   .modal-close-btn:hover,
@@ -877,12 +878,10 @@ flex-direction: column;
     color: var(--textcolor)
   }
 
-  .modal-form-container{
-margin-top: 16px;
-  }
 
   .modal-form-field{
-margin-bottom: 8px;
+    display: block;
+margin-top:8px;
   }
 
   .modal-form-text{
@@ -891,7 +890,8 @@ margin-bottom: 8px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
-    margin-bottom: 8px;
+    display: block;
+    margin-bottom: 4px;
   }
   
   .modal-form-wrapper{
@@ -934,6 +934,9 @@ height: 120px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 border-radius: 4px;
 padding: 8px 16px;
+display: block;
+resize: none;
+margin-top: 4px;
 }
 
 .modal-form-msg::placeholder{
@@ -944,6 +947,9 @@ letter-spacing: 0.04em;
 color: rgba(46, 47, 66, 0.4);
 }
 
+.modal-checkbox-field{
+  display: flex;
+}
 
 .modal-form-check-desc{
 font-weight: 400;
@@ -952,6 +958,7 @@ line-height: 1.33;
 letter-spacing: 0.04em;
 color: #8E8F99;
 margin-left: 8px;
+margin-top: 16px;
 }
 
 .modal-form-check {
@@ -959,10 +966,23 @@ width: 16px;
 height: 16px;
 border: 1px solid rgba(46, 47, 66, 0.4);
 border-radius: 2px;
+
+background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' style='position: absolute; width: 10; height: 8; overflow: hidden;' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Csymbol id='icon-checkbox' viewBox='0 0 40 32'%3E%3Cpath fill='%23f4f4fd' style='fill: var(--color1, %23f4f4fd)' d='M33.782 1.020c0.691-0.662 1.611-1.027 2.565-1.020s1.869 0.387 2.55 1.059c0.681 0.672 1.076 1.584 1.101 2.543s-0.321 1.891-0.966 2.598l-19.578 24.617c-0.337 0.365-0.743 0.657-1.195 0.86s-0.939 0.312-1.434 0.322c-0.495 0.009-0.986-0.082-1.445-0.268s-0.876-0.463-1.226-0.815l-12.984-13.054c-0.362-0.339-0.652-0.747-0.853-1.201s-0.309-0.944-0.318-1.441 0.082-0.99 0.267-1.451c0.185-0.461 0.461-0.879 0.81-1.231s0.766-0.628 1.224-0.814 0.949-0.277 1.443-0.269c0.494 0.009 0.981 0.118 1.433 0.32s0.858 0.494 1.195 0.857l10.275 10.325 17.042-21.83c0.031-0.038 0.063-0.074 0.098-0.109h-0.005z'%3E%3C/path%3E%3C/symbol%3E%3C/defs%3E%3C/svg%3E%0A");
+
+background-repeat: no-repeat;
+background-position: center;
+background-size: 0;
+justify-content: left;
+margin-top: 16px;
+cursor:pointer;
+transition: var(--cubic);
 }
 
-.modal-form-check:focus{
-background-color: var(--activebackbtncolor);
+.modal-form-check:checked {
+  background-color: var(--activebackbtncolor);
+  border: 1px solid var(--activebackbtncolor);
+  border-radius: 2px;
+  background-size: 10px;
 }
 
 .modal-form-submit {
