--- a/css/styles.css
+++ b/css/styles.css
@@ -747,17 +747,6 @@ color: var(--backgroundcolor);
   color: var(--backgroundcolor);
 }
 
-  .footer-form-field::placeholder{
- position: absolute;
-font-weight: 400;
-font-size: 12px;
-line-height: 2.0;
-letter-spacing: 0.04em;
-color: var(--backgroundcolor);
-
-  }
-
-
   .footer-form-input{
 border: 1px solid var(--backgroundcolor);
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -769,6 +758,14 @@ height: 40px;
 padding: 8px 16px;
   }
 
+  .footer-form-input::placeholder{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2.0;
+    letter-spacing: 0.04em;
+    color: var(--backgroundcolor);
+  }
+  
   .footer-form-subscribe{
 text-align: left;
 padding-left: 24px;
