--- a/css/styles.css
+++ b/css/styles.css
@@ -722,11 +722,6 @@ background-color: #31D0AA;
   }
 
 
-  .footer-contact-form{
-    display:flex;
-    flex-direction: column;
-  }
-
 .footer-form-text {
 font-weight: 500;
 font-size: 16px;
@@ -767,6 +762,8 @@ padding: 8px 16px;
   }
   
   .footer-form-subscribe{
+    display: flex;
+  align-items: center;
 text-align: left;
 padding-left: 24px;
     font-weight: 500;
@@ -791,11 +788,8 @@ padding-left: 24px;
   
 
   .footer-form-icon{
-    position: absolute;
 fill: var(--backgroundcolor);
-flex-wrap: wrap;
 margin-left: 16px;
-margin-right: 10px;
   }
 
   .overlay{
@@ -823,7 +817,7 @@ top:50%;
 left: 50%;
 transform: translate(-50%, -50%);
 width:408px;
-min-height: 584px;
+height: 584px;
 background-color: #fcfcfc;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
@@ -864,7 +858,8 @@ background-color: var(--activebackbtncolor);
   .modal-form {
 display: flex;
 flex-direction: column;
-  }
+gap:8px;
+}
 
   .modal-text {
     font-weight: 500;
@@ -874,11 +869,13 @@ flex-direction: column;
     letter-spacing: 0.02em;
     color: var(--textcolor)
   }
-
+  .modal-form{
+margin-top: 16px;
+margin-bottom: 16px;
+}
 
   .modal-form-field{
     display: block;
-margin-top:8px;
   }
 
   .modal-form-text{
@@ -934,6 +931,7 @@ padding: 8px 16px;
 display: block;
 resize: none;
 margin-top: 4px;
+margin-bottom: 16px;
 }
 
 .modal-form-msg::placeholder{
@@ -944,9 +942,40 @@ letter-spacing: 0.04em;
 color: rgba(46, 47, 66, 0.4);
 }
 
-.modal-checkbox-field{
+
+.modal-checkbox-label {
   display: flex;
+  gap: 8px;
+  justify-content: center;
+  transition: var(--cubic);
 }
+
+.modal-form-check {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 0;
+  justify-content: left;
+  cursor:pointer;
+  }
+
+.modal-checkbox-svg{
+  position: absolute;
+  display: block;
+  justify-content:left ;
+  top: 476px;;
+  left: 38px;
+  fill: var(--secondarycolor);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 0;
+  justify-content: left;
+  cursor:pointer;
+  }
 
 .modal-form-check-desc{
 font-weight: 400;
@@ -954,33 +983,15 @@ font-size: 12px;
 line-height: 1.33;
 letter-spacing: 0.04em;
 color: #8E8F99;
-margin-left: 8px;
-margin-top: 16px;
 }
 
-.modal-form-check {
-width: 16px;
-height: 16px;
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 2px;
-
-background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' style='position: absolute; width: 10; height: 8; overflow: hidden;' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Csymbol id='icon-checkbox' viewBox='0 0 40 32'%3E%3Cpath fill='%23f4f4fd' style='fill: var(--color1, %23f4f4fd)' d='M33.782 1.020c0.691-0.662 1.611-1.027 2.565-1.020s1.869 0.387 2.55 1.059c0.681 0.672 1.076 1.584 1.101 2.543s-0.321 1.891-0.966 2.598l-19.578 24.617c-0.337 0.365-0.743 0.657-1.195 0.86s-0.939 0.312-1.434 0.322c-0.495 0.009-0.986-0.082-1.445-0.268s-0.876-0.463-1.226-0.815l-12.984-13.054c-0.362-0.339-0.652-0.747-0.853-1.201s-0.309-0.944-0.318-1.441 0.082-0.99 0.267-1.451c0.185-0.461 0.461-0.879 0.81-1.231s0.766-0.628 1.224-0.814 0.949-0.277 1.443-0.269c0.494 0.009 0.981 0.118 1.433 0.32s0.858 0.494 1.195 0.857l10.275 10.325 17.042-21.83c0.031-0.038 0.063-0.074 0.098-0.109h-0.005z'%3E%3C/path%3E%3C/symbol%3E%3C/defs%3E%3C/svg%3E%0A");
-
-background-repeat: no-repeat;
-background-position: center;
-background-size: 0;
-justify-content: left;
-margin-top: 16px;
-cursor:pointer;
-transition: var(--cubic);
-}
-
-.modal-form-check:checked {
+.modal-form-check:checked{
   background-color: var(--activebackbtncolor);
   border: 1px solid var(--activebackbtncolor);
   border-radius: 2px;
   background-size: 10px;
 }
+
 
 .modal-form-submit {
 font-weight: 500;
@@ -996,9 +1007,9 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 padding: 16px 32px;
 display: block;
-margin-top: 24px;
 margin-left: auto;
 margin-right: auto;
+margin-top: 28px;
 min-width: 169px;
 height: 56px;
 border: none;
